--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
   "license": "ISC",
   "devDependencies": {
     "lite-server": "2.4.0",
-    "openzeppelin-solidity": "2.0.0-rc.1",
-    "truffle-hdwallet-provider": "0.0.6"
+    "openzeppelin-solidity": "^2.3.0",
+    "truffle-hdwallet-provider": "^1.0.17"
   },
   "dependencies": {
-    "solc": "^0.4.24"
+    "solc": "^0.5.11",
+    "truffle": "^5.0.33"
   }
 }
